# stdr_prsg2

./: CMakeLists.txt  README.md  package.xml
launch/: plotbag_stdr.py  stdr_prsg2.launch  stdr_quadrille.bash  stdr_quadrille.launch  stdr_quadrille_4bots.launch  stdr_quadrille_robot0.launch  stdr_quadrille_robot1.launch  stdr_quadrille_robot2.launch  stdr_quadrille_robot3.launch
maps/: rectangle.yaml
robots/: prsg2_jay_robot.yaml
